--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="wor container">
         <div class="col">
-            <h1>Jugador 1 -<small> 0</small></h1>
+            <h1>Jugador 1 -<small id="small-jugador"> 0</small></h1>
             <div id="jugador-cartas">
                 <!-- <img class="carta" src="assets/cartas/3C.png"> -->
             </div>
@@ -37,9 +37,9 @@
     <div class="wor container mt-2">
         <div class="col">
 
-            <h1>Computadora -<small> 0</small></h1>
+            <h1>Computadora -<small id="small-computadora"> 0</small></h1>
             <div id="computadora-cartas">
-                <img class="carta" src="assets/cartas/2C.png">
+                <!-- <img class="carta" src="assets/cartas/2C.png"> -->
                 <!-- <img class="carta" src="assets/cartas/2C.png"> -->
                 <!-- <img class="carta" src="assets/cartas/2C.png"> -->
                 <!-- <img class="carta" src="assets/cartas/2C.png"> -->
